--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -13,7 +13,8 @@
         android:layout_alignParentTop="true"
         android:alpha=".10"
         android:scaleType="fitXY"
-        android:src="@drawable/re_bg" />
+        android:src="@drawable/re_bg"
+        android:layout_centerHorizontal="true"/>
 
 
     <RelativeLayout
@@ -67,7 +68,7 @@
                 android:gravity="left"
                 android:hint="@string/Username_hint"
                 android:inputType="textNoSuggestions|textVisiblePassword"
-                android:singleLine="true" />
+                android:singleLine="true"/>
 
             <Spinner
                 android:id="@+id/BullTypeSpinner"
@@ -77,7 +78,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_row="1"
                 android:gravity="left"
-                android:singleLine="true" />
+                android:singleLine="true"/>
         </GridLayout>
     </RelativeLayout>
 
