--- a/app/src/main/res/layout/activity_viewall.xml
+++ b/app/src/main/res/layout/activity_viewall.xml
@@ -15,6 +15,13 @@
         android:scaleType="fitXY"
         android:src="@drawable/re_bg" />
 
+
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="false"
+        android:orientation="vertical"
+        android:padding="3dp">
     <RelativeLayout
         android:id="@+id/relativelayout1"
         android:layout_width="wrap_content"
@@ -23,6 +30,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="30dp">
+
 
         <GridLayout
             android:id="@+id/gridlayout1"
@@ -113,6 +121,7 @@
                 android:layout_row="0"
                 android:gravity="left" />
 
+
             <TextView
                 android:id="@+id/ToValue"
                 style="@style/SubText"
@@ -155,6 +164,7 @@
                 android:singleLine="true" />
         </GridLayout>
 
+
         <Button
             android:id="@+id/buttonURL"
             android:layout_width="wrap_content"
@@ -170,5 +180,5 @@
             android:textStyle="bold|normal" />
 
     </RelativeLayout>
-
+</ScrollView>
 </RelativeLayout>
