--- a/app/src/main/res/menu/nav_main.xml
+++ b/app/src/main/res/menu/nav_main.xml
@@ -1,7 +1,7 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".NavMainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-         android:showAsAction="never" />
-    <item android:id="@+id/action_example" android:title="@string/action_example"
-        android:showAsAction="never" android:orderInCategory="100"/>
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/action_checkfuel"
+        android:showAsAction="never"
+        android:title="@string/action_fuelprice" />
 </menu>
